exports[`test renders the same as before with no slots 1`] = `
<div>
  <h3>
    Today 
    1999-01-01
  </h3>
</div>
`;

exports[`test renders the same as before with two slots 1`] = `
<div>
  <h3>
    Today 
    1999-01-01
  </h3>
  <button />
  <button />
</div>
`;
